[package]
name = "convex"
description = "Convex fixed income analytics — facade re-exporting the public API of convex-core, convex-curves, convex-bonds, and convex-analytics."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["finance", "fixed-income", "bonds", "pricing", "quantitative"]
categories = ["finance"]

[features]
default = []
# Pass-through: enables `schemars` derives on convex-core domain types.
schemars = ["convex-core/schemars"]

[dependencies]
convex-core = { workspace = true }
convex-curves = { workspace = true }
convex-bonds = { workspace = true }
convex-analytics = { workspace = true }

