[package]
name = "convex"
description = "Convex fixed income analytics — single-import facade."
# Not published: the `convex` name on crates.io belongs to an unrelated project.
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["finance", "fixed-income", "bonds", "pricing", "quantitative"]
categories = ["finance"]

[features]
schemars = ["convex-core/schemars", "convex-analytics/schemars"]

[dependencies]
convex-core = { workspace = true }
convex-curves = { workspace = true }
convex-bonds = { workspace = true }
convex-analytics = { workspace = true }
