[package]
name = "reconcile_bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Convex ↔ QuantLib reconciliation bench — not published."

[[bin]]
name = "convex_bench"
path = "src/main.rs"

[dependencies]
convex-core = { workspace = true }
convex-bonds = { workspace = true }
convex-analytics = { workspace = true }

rust_decimal = { workspace = true }
rust_decimal_macros = "1.34"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
