[package]
name = "reconcile_bench"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false
description = "Convex ↔ QuantLib reconciliation bench — not published."

# This package is excluded from the workspace (see ../../Cargo.toml).
# Build standalone:
#   cargo build --manifest-path tools/reconcile_bench/Cargo.toml
#   cargo run   --manifest-path tools/reconcile_bench/Cargo.toml

[[bin]]
name = "convex_bench"
path = "src/main.rs"

[dependencies]
convex-core      = { path = "../../crates/convex-core" }
convex-bonds     = { path = "../../crates/convex-bonds" }
convex-curves    = { path = "../../crates/convex-curves" }
convex-analytics = { path = "../../crates/convex-analytics" }

rust_decimal = { version = "1.34", features = ["serde", "serde-float", "maths"] }
rust_decimal_macros = "1.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
